--- a/.near-swap.yaml.example
+++ b/.near-swap.yaml.example
@@ -94,11 +94,64 @@ auto_deposit:
     # Example: ["-testnet", "-rpcuser=user", "-rpcpassword=pass"]
     cli_args: []
 
-  # Ethereum configuration (planned)
-  # ethereum:
-  #   enabled: false
-  #   rpc_url: "http://localhost:8545"
-  #   private_key_file: "~/.ethereum/keystore/key.json"
+  # EVM Networks configuration
+  # Supports Ethereum, BSC, Polygon, Avalanche, Arbitrum, Optimism, Base, Fantom, etc.
+  # You can configure multiple networks and the CLI will use the appropriate one based on the chain
+  evm:
+    # Enable auto-deposit for EVM networks (default: false)
+    enabled: false
+
+    # Configure individual networks
+    networks:
+      # Ethereum Mainnet
+      # ethereum:
+      #   rpc_url: "https://eth-mainnet.g.alchemy.com/v2/YOUR-API-KEY"
+      #   chain_id: 1
+      #   private_key: "0xYOUR_PRIVATE_KEY_HERE"
+      #   # gas_price: 20000000000  # Optional: wei per gas (if not set, uses network estimate)
+      #   # gas_limit: 100000       # Optional: max gas (if not set, uses estimate)
+
+      # Binance Smart Chain
+      # bsc:
+      #   rpc_url: "https://bsc-dataseed.binance.org"
+      #   chain_id: 56
+      #   private_key: "0xYOUR_PRIVATE_KEY_HERE"
+
+      # Polygon (Matic)
+      # polygon:
+      #   rpc_url: "https://polygon-rpc.com"
+      #   chain_id: 137
+      #   private_key: "0xYOUR_PRIVATE_KEY_HERE"
+
+      # Avalanche C-Chain
+      # avalanche:
+      #   rpc_url: "https://api.avax.network/ext/bc/C/rpc"
+      #   chain_id: 43114
+      #   private_key: "0xYOUR_PRIVATE_KEY_HERE"
+
+      # Arbitrum One
+      # arbitrum:
+      #   rpc_url: "https://arb1.arbitrum.io/rpc"
+      #   chain_id: 42161
+      #   private_key: "0xYOUR_PRIVATE_KEY_HERE"
+
+      # Optimism
+      # optimism:
+      #   rpc_url: "https://mainnet.optimism.io"
+      #   chain_id: 10
+      #   private_key: "0xYOUR_PRIVATE_KEY_HERE"
+
+      # Base
+      # base:
+      #   rpc_url: "https://mainnet.base.org"
+      #   chain_id: 8453
+      #   private_key: "0xYOUR_PRIVATE_KEY_HERE"
+
+      # Fantom Opera
+      # fantom:
+      #   rpc_url: "https://rpc.ftm.tools"
+      #   chain_id: 250
+      #   private_key: "0xYOUR_PRIVATE_KEY_HERE"
 
   # Solana configuration (planned)
   # solana:
@@ -128,3 +181,36 @@ timeout: 30
 
 # Number of retries for failed API requests
 max_retries: 3
+
+# ============================================================
+# IMPORTANT SECURITY NOTES
+# ============================================================
+#
+# 1. NEVER commit this file with real private keys to version control
+#    - Add .near-swap.yaml to your .gitignore
+#    - Only commit .near-swap.yaml.example
+#
+# 2. Use environment variables for sensitive data in production:
+#    - NEAR_SWAP_JWT_TOKEN for the JWT token
+#    - NEAR_SWAP_AUTO_DEPOSIT_EVM_NETWORKS_ETHEREUM_PRIVATE_KEY for EVM private keys
+#
+# 3. Keep your private keys secure:
+#    - Use a dedicated wallet for auto-deposit with limited funds
+#    - Never share your private keys
+#    - Consider using hardware wallets or key management services for large amounts
+#
+# 4. For EVM networks, you can use RPC providers:
+#    - Alchemy (https://www.alchemy.com/) - Recommended
+#    - Infura (https://infura.io/)
+#    - QuickNode (https://www.quicknode.com/)
+#    - Or run your own node
+#
+# 5. Always test with small amounts on testnets first:
+#    - Use testnet networks before mainnet
+#    - Verify addresses and amounts carefully
+#
+# 6. EVM Auto-Deposit supports:
+#    - Native tokens (ETH, BNB, MATIC, etc.)
+#    - ERC20 tokens (USDC, USDT, DAI, etc.)
+#    - Automatic gas estimation
+#    - Multiple networks simultaneously
