feat: add trading plan management and execution features
- Introduced a new `Executor` to manage the execution of trading plans, including monitoring and executing trades based on price conditions.
- Created a `Manager` for handling trading plans, including creation, retrieval, updating, and deletion of plans.
- Implemented a `Pricer` to fetch current prices and determine if trades should be executed based on the defined conditions.
- Added a `Storage` system for persisting trading plans to a JSON file, allowing for loading and saving of plans.
- Defined new types and structures for trading plans, executions, and their statuses.
- Enhanced configuration to include a path for storing trading plans.

--- a/.near-swap.yaml.example
+++ b/.near-swap.yaml.example
@@ -207,6 +207,14 @@ timeout: 30
 max_retries: 3
 
 # ============================================================
+# Trading Plans Configuration
+# ============================================================
+
+# Path to store trading plans (default: ~/.near-swap-plans.json)
+# Leave empty to use the default location
+# plan_storage_path: "/custom/path/to/plans.json"
+
+# ============================================================
 # IMPORTANT SECURITY NOTES
 # ============================================================
 #
